--- a/src/styles/fonts.scss
+++ b/src/styles/fonts.scss
@@ -1,6 +1,27 @@
-@import url('https://fonts.googleapis.com/css2?family=Arimo:ital,wght@0,400..700;1,400..700&family=Inter:wght@100..900&display=swap');
+// @import url('https://fonts.googleapis.com/css2?family=Arimo:ital,wght@0,400..700;1,400..700&family=Inter:wght@100..900&display=swap');
 
-// * {
-//   font-family: "Arimo", sans-serif;
-//   font-family: "Inter", sans-serif;
-// }
+@font-face {
+  font-family: 'Arimo';
+  font-style: normal;
+  font-weight: 400;
+  src: url('@fonts/Arimo/Arimo-Regular-subset.woff2') format('woff2'),
+       url('@fonts/Arimo/Arimo-Regular-subset.woff') format('woff'),
+       url('@fonts/Arimo/Arimo-Regular-subset.ttf') format('truetype');
+}
+
+@font-face {
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 400;
+  src: url('@fonts/Inter/Inter-Regular-subset.woff2') format('woff2'),
+       url('@fonts/Inter/Inter-Regular-subset.woff') format('woff'),
+       url('@fonts/Inter/Inter-Regular-subset.ttf') format('truetype');
+}
+@font-face {
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 500;
+  src: url('@fonts/Inter/Inter-Medium-subset.woff2') format('woff2'),
+       url('@fonts/Inter/Inter-Medium-subset.woff') format('woff'),
+       url('@fonts/Inter/Inter-Medium-subset.ttf') format('truetype');
+}
