Added catalog view

--- a/src/styles/vars/colors.scss
+++ b/src/styles/vars/colors.scss
@@ -1,5 +1,6 @@
 $white: #FFFFFF;
-$gray: #A2A2A2;
-$dark-gray: #797979;
+$dark-gray: #A2A2A2;
+$medium-gray: #D1D1D1;
+$light-gray: #ECECEC;
 $pink: #CF225D;
 $plum: #9a1441;
